# hocrgen

./: .agent-plan.md  .gitignore  AGENTS.md  AGENT_README.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml  splendor.yaml
.github/ISSUE_TEMPLATE/: beta_trial.yml
.github/workflows/: expansion-maintenance.yml  hocrgen-dry-run.yml  pr-agent-context-refresh.yml  validate.yml
docs/: HeOCR_hocrgen_long_term_roadmap.md  benchmark_ground_truth_guidelines.md  heocr_ecosystem_overview.md  hocrgen_design_and_spec.md  hocrgen_normalization_and_qa.md  hocrsyngen_adapter_preflight_plan.md  modern_handwritten_acquisition_policy.md  pre_alpha_freeze_plan.md  release_governance.md  source_adapter_contribution_guide.md  synthetic_asset_contribution_guide.md
review_app/: .gitignore  README.md  package.json  wrangler.toml
schemas/: privacy_rules.schema.json  quality_thresholds.schema.json  release_profile.schema.json  review_decision.schema.json  review_override.schema.json  source.schema.json
scripts/: promote_nli_seeds.py
tests/: test_acquisition.py  test_alpha_export.py  test_benchmark.py  test_cli.py  test_config.py  test_context.py  test_curation.py  test_evaluation.py  test_heocrsynth_export.py  test_hocrsyngen_manifest.py  test_hocrsyngen_preflight.py  test_modern_handwriting_intake.py  test_nli_seed_promotion.py  test_normalize.py  test_pipeline.py  test_planning_docs.py  test_public_beta_export.py  test_review_readiness.py  test_review_readiness_branches.py  test_runs.py  test_source_ops.py  test_workflows.py
wiki/: index.md  log.md
(+411 files in other folders)
