[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hocrgen"
version = "0.1.0"
description = "Policy-driven dataset operations scaffolding for the HeOCR project."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HeOCR maintainers" }
]
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
hocrgen = "hocrgen.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hocrgen.config" = ["*.yaml", "profiles/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
